--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -40,7 +40,7 @@
     }
 </style>
 <div class="row mb-5" style="margin-top:-60px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
 
         <div class="row" style="margin-top:-4px">
