--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -19,7 +19,7 @@
 </style>
 
 <div class="row text-sm p-0"  style="margin-top:-5px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
         <div class="card  shadow card card-outline card-tabs" style="margin-top:-20px">
         
 
