--- a/ERPWeb/Views/ControlPanel/CreateAppRole.cshtml
+++ b/ERPWeb/Views/ControlPanel/CreateAppRole.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row" style="margin-top:-8px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
         <div class="px-2 py-1" style="background-color:#001f3f;margin-top:-15px">
             <div class="row text-sm align-items-center">
                 <div class="col-md-3">
@@ -31,7 +31,7 @@
 </div>
 
 <div class="row" style="margin-top:15px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
         <div class="px-2 py-1" style="background-color: #20B2AA; margin-top: -15px">
             <div class="row text-sm align-items-center">
@@ -58,7 +58,7 @@
     </div>
  </div>
         <div class="row" style="margin-top:0px">
-            <div class="col-md-12">
+            <div class="col-md-12 p-0">
             
                         <div class="col-md-12" style="max-height:500px;overflow-y:scroll">
                             <table class="table table-sm table-avatar table-responsive-lg" id="tblMenuData"></table>
