--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="row text-sm" style="margin-top:-25px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
         <div class="row" style="margin-top:0px">
             <div class="col-md-12">
