--- a/ERPWeb/Views/AgroConfiguration/CreateProductPrice.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateProductPrice.cshtml
@@ -5,7 +5,7 @@
 
 
 <div class="row" style="margin-top:-10px;">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
         <div class="row" style="margin-top:-15px">
             <div class="col-md-12">
