--- a/ERPWeb/Views/AgroConfiguration/DealarLadger.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DealarLadger.cshtml
@@ -3,9 +3,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:-8px">
+<div class="row" style="margin-top:-10px">
 
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
         <div class="row">
             <div class="col-md-12" style="margin-top:-14px">
