--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -30,7 +30,7 @@
 
 </style>
 <div class="row text-sm p-0" style=" margin-top: -40px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
 
         <div class="card  shadow card  card-outline card-tabs" style="margin-top:-25px">
@@ -114,7 +114,7 @@
                                 <div class="col-md-12">
                                     <div class="card mb-0" style="background-color:#001f3f">
                                         <div class="px-2 py-1">
-                                            <div class="row">
+                                            <div class="row align-items-center">
                                                 <div class="col-md-3">
 
                                                 </div>
