--- a/ERPWeb/Views/AgroConfiguration/MoneyReceiptList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/MoneyReceiptList.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row" style="margin-top:-12px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
         <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
