--- a/ERPWeb/Views/AgroConfiguration/PackageCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/PackageCreate.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="row text-sm" style="margin-top:-25px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
         <div class="row">
             <div class="col-md-12">
