--- a/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row" style="margin-top:-10px">
 
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
 
         <div class="row" style="margin-top:-15px">
