--- a/ERPWeb/Views/AgroConfiguration/ProductionPriceList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductionPriceList.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="row" style="margin-top:-23px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
 
         <div class="row">
