--- a/ERPWeb/Views/ControlPanel/AppUserConfiguration.cshtml
+++ b/ERPWeb/Views/ControlPanel/AppUserConfiguration.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="row text-sm">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
 
 
         <div class="card  shadow card  card-outline card-tabs" style="margin-top:-25px">
