--- a/ERPWeb/Views/ControlPanel/ApplicationConfig.cshtml
+++ b/ERPWeb/Views/ControlPanel/ApplicationConfig.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="row text-sm">
-    <div class="col-md-12" style="margin-top:-25px">
+    <div class="col-md-12 p-0" style="margin-top:-25px">
 
 
         <div class="card  shadow card  card-outline card-tabs" >
