--- a/ERPWeb/Views/ControlPanel/CreateAppUser.cshtml
+++ b/ERPWeb/Views/ControlPanel/CreateAppUser.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="row" style="margin-top:-10px">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
         <div class="px-2 py-1" style="background-color:#001f3f;margin-top:-14px">
             <div class="row text-sm align-items-center">
                 <div class="col-md-3">
