--- a/ERPWeb/Views/AgroConfiguration/GetDropList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetDropList.cshtml
@@ -11,17 +11,17 @@
         <div class="row" style="margin-top:-12px">
             <div class="col-md-12">
                 <div class="card" style="background-color:#001f3f">
-                    <div class="px-2 py-1" style="text-align: center;">
-                        <div class="row">
+                    <div class="px-2 py-1 p-0">
+                        <div class="row align-items-center">
                             <div class="col-md-3">
-                                <h5 class="float-left text-bold text-white">
+                                <h6 class="float-left text-bold text-white">
                                     Sales Drop List
-                                </h5>
+                                </h6>
                             </div>
                             <div class="col-md-2">
 
                             </div>
-                            <div class="col-md-3" >
+                            <div class="col-md-2" >
 
                                 <input type="text" class="form-control form-control-sm" id="SearchInvoice" placeholder="search By invoice" />
                             </div>
@@ -35,18 +35,15 @@
             </div>
         </div>
 
-
-
-
-        <div class="row" style="margin-top:-3px">
-            <div class="col-md-12" style="margin-top:-10px">
-                <div class="card ">
-                    <div class="card-body"style="margin-top:-10px">
+        <div class="row" style="margin-top:-5px">
+            <div class="col-md-12 p-0" style="margin-top:-10px">
+                
+                    <div class="card-body p-0">
                         <div class="col-md-12" id="dataContainer">
 
                         </div>
                     </div>
-                </div>
+              
             </div>
         </div>
 
