--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -67,7 +67,7 @@
 
                                         <div class="col-md-2">
 
-                                            <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="search Invoice" />
+                                            <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="search Invoice" autofocus/>
                                         </div>
 
                                         <div class="col-md-2">
@@ -322,7 +322,7 @@
                                         </div>
 
                                         <div class="col-md-2 float-right text-white">
-                                            <input type="text" class="form-control form-control-sm" id="searchByAnyy" placeholder="Search by any" />
+                                            <input type="text" class="form-control form-control-sm" id="searchByAnyy" placeholder="Search by any" autofocus/>
 
                                         </div>
                                         <div class="col-3">
