--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductionList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductionList.cshtml
@@ -14,6 +14,7 @@
                     <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle">Production Batch Code</th>
                     <th style="vertical-align:middle">Product Name</th>
+                    <th style="vertical-align:middle">Measurement Name</th>
                     <th style="vertical-align:middle">Qty</th>
                     <th style="vertical-align:middle">Date</th>
                     <th style="vertical-align:middle">Action</th>
@@ -29,6 +30,7 @@
                         <td class="hide">@item.FinishGoodProductInfoId</td>
                         <td class="text-center">@item.FinishGoodProductionBatch</td>
                         <td class="text-center">@item.FinishGoodProductName</td>
+                        <td class="text-center">@item.MeasurementName</td>
                         <td class="text-center">@item.TargetQuantity</td>
                         <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
                         <td class="text-center">
