--- a/ERPWeb/Views/AgroConfiguration/_GetProductSalesDropList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetProductSalesDropList.cshtml
@@ -42,7 +42,7 @@
                 <td class="text-center">@item.PaidAmount</td>
                 <td class="text-center">@item.DueAmount</td>
                 <td class="text-center">
-                    <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail-Drop-ProductionSalesInfoId" title="View Detail" data-item-detail-Drop-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                    <a href="#" class="emndetails-btn data-item-detail-Drop-ProductionSalesInfoId" title="View Detail" data-item-detail-Drop-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
                         <i class="fas fa-eye"></i>
                     </a>
 
