--- a/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
@@ -2,7 +2,7 @@
     @{ 
         int sl = 0;
     }
-<div class="col-md-12">
+<div class="col-md-12 p-0">
     <table class="table table-bordered table-sm table-striped table-responsive-lg text-sm">
         <thead class="btn-dark">
             <tr class="text-center text-bold">
@@ -34,7 +34,7 @@
                 <td class="text-center">@item.Status</td>
                 <td class="hide">@item.UnitKG</td>
                 <td class="text-center">
-                    <a href="#" class="btn btn-warning btn-sm data-edit-item-measurement" style="line-height:1" data-edit-item-measurement="@item.MeasurementId"><i class="fa fa-pen"></i>Edit</a>
+                    <a href="#" class="dasedit-btn data-edit-item-measurement" style="line-height:1" data-edit-item-measurement="@item.MeasurementId"><i class="fa fa-pen"></i></a>
                 </td>
 
             </tr>
