--- a/ERPWeb/Views/AgroConfiguration/_GetAgroUnitPartial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroUnitPartial.cshtml
@@ -5,7 +5,7 @@
     var SL = 0;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12 p-0">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblAgroUnit">
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -31,7 +31,7 @@
                     <td class="text-center">
                         @*@if (privilege.Edit)
             {*@
-                        <a href="#" class="btn btn-warning btn-sm data-edit-item-UnitId" style="line-height:1" data-edit-item-UnitId="@item.UnitId"><i class="fa fa-pen"></i> Edit</a>
+                        <a href="#" class="dasedit-btn data-edit-item-UnitId" style="line-height:1" data-edit-item-UnitId="@item.UnitId"><i class="fa fa-pen"></i></a>
                         @*}*@
                     </td>
                 </tr>
