--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -2,7 +2,7 @@
     @{ 
         int sl=0;
     }
-<div class="col-md-12">
+<div class="col-md-12 p-0">
     <table class="table table-bordered table-striped table-hover table-sm text-sm">
         <thead class="btn-dark">
             <tr class="text-center">
@@ -40,7 +40,7 @@
                 <td class="text-center hide">@raw.OrganizationId</td>
                 <td class="text-center hide">@raw.UnitId</td>
                 <td class="text-center">
-                    <a href="#" class="btn btn-warning btn-sm data-edit-item-rawMaterialId" style="line-height:1" data-edit-item-rawMaterialId="@raw.RawMaterialId"><i class="fa fa-pen"></i>Edit</a>
+                    <a href="#" class="dasedit-btn btn-sm data-edit-item-rawMaterialId" style="line-height:1" data-edit-item-rawMaterialId="@raw.RawMaterialId"><i class="fa fa-pen"></i></a>
                     
                 </td>
             </tr>
